--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "openai-php/laravel": "^0.4.1",
         "revolution/laravel-line-sdk": "^2.2"
     },
     "require-dev": {
