--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,8 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
-        "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^10.0",
-        "laravel/sanctum": "^3.2",
+        "php": "^8.2",
+        "laravel/framework": "^11.0",
         "laravel/tinker": "^2.8",
         "openai-php/laravel": "^0.10.1",
         "revolution/laravel-line-sdk": "^3.0"
@@ -18,10 +16,9 @@
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^10.0",
-        "revolution/laravel-vercel-installer": "^1.1",
-        "spatie/laravel-ignition": "^2.0"
+        "nunomaduro/collision": "^8.3",
+        "phpunit/phpunit": "^11.0",
+        "revolution/laravel-vercel-installer": "^1.1"
     },
     "autoload": {
         "psr-4": {
